fix: stop images overlapping roles

--- a/src/app/role/role.component.scss
+++ b/src/app/role/role.component.scss
@@ -15,7 +15,6 @@
   .role-image {
     float: right;
     width: 250px;
-    margin-top:    16px;
     margin-left:   16px;
     margin-bottom: 16px;
   }
